<resources>
    <string name="welcome">Welcome !</string>
    <string name="app_name">Laygo</string>
    <string name="search_hint">Find your brick</string>
    <string name="add_activity">Add a new word</string>
    <string name="quiz_next">Next question</string>
    <string name="quiz_title">QUIZ</string>
    <string name="quiz_radiobutton">Question</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="examples">Write some examples here.</string>
    <string name="search_examples">Search example sentences</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_quiz">Text quiz</string>
    <string name="picture_quiz">Picture quiz</string>
    <string name="choose_quiz">Choose the type of quiz you want to play !</string>
    <string name="score">Congratulations, this is your score !</string>
    <string name="help_title">Help</string>
    <string name="help">&#8226; Add some bricks to your dictionary\n&#8226; Search through your list of bricks to review one of them\n&#8226; Play a quiz to exercise\n&#8226; Check the location of your bricks on the maps</string>
</resources>
