<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_brick"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/add_activity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.laygo.laygo.activity.ViewAndEditBrickActivity">
 <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/saveButton"
        android:layout_toRightOf="@+id/saveButton"
        android:layout_toEndOf="@+id/saveButton"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:id="@+id/cancelButton" />

    <Button
        android:text="@string/edit"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cancelButton"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:id="@+id/editButton" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"/>

    <ImageView
     android:id="@+id/photo"
     android:layout_height="150dp"
     android:src="@drawable/noimage"
     android:layout_width="150dp"
     android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
     android:layout_marginLeft="12dp"
     android:layout_marginStart="12dp" />

    <ImageView
     android:id="@+id/setLocation"
     android:layout_width="60dp"
     android:layout_height="60dp"
     android:src="@drawable/location_icon"
     android:scaleType="centerInside"
    android:layout_toRightOf="@+id/camera"
        android:layout_toEndOf="@+id/camera"
    android:layout_below="@+id/photo" />

    <ImageView android:id="@+id/camera"
       android:layout_height="60dp"
       android:src="@drawable/camera_icon"
       android:layout_width="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/photo" />

    <ImageView
        android:src="@drawable/play_icon"
        android:id="@+id/playIcon"
        android:layout_height="54dp"
        android:layout_width="54dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/camera"
        android:layout_alignLeft="@+id/editButton"
        android:layout_alignStart="@+id/editButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_mic"
        android:layout_centerVertical="true"
        android:layout_below="@+id/setLocation"
        android:layout_alignRight="@+id/setLocation"
        android:layout_alignEnd="@+id/setLocation"
        android:id="@+id/recordIcon" />


    <ViewSwitcher
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/wordSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/photo"
        android:layout_toEndOf="@id/photo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textPersonName"
            android:hint="@string/word"
            android:ems="10"
            android:id="@+id/editWord"
        />

        <TextView
            android:id="@+id/viewWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </ViewSwitcher>

    <ViewSwitcher
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/translationSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/photo"
        android:layout_toEndOf="@id/photo"
        android:layout_below="@+id/wordSwitcher"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/translation"
            android:ems="10"
            android:id="@+id/editTranslation"
             />

        <TextView
            android:id="@+id/viewTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </ViewSwitcher>

    <ViewSwitcher
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/examplesSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recordIcon"
        android:layout_alignLeft="@+id/recordIcon"
        android:layout_alignStart="@+id/recordIcon">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:ems="10"
            android:id="@+id/editExamples"
            android:hint="@string/examples"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/viewExamples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </ViewSwitcher>

    <Button
        android:text="@string/search_examples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_below="@id/examplesSwitcher"
        android:layout_alignStart="@id/examplesSwitcher"
        android:layout_alignLeft="@id/examplesSwitcher"
        android:id="@+id/searchButton" />

</RelativeLayout>
